# central_flows_jax

./: .gitignore  README.md  __init__.py  flows.py  pyproject.toml  sdcp.py  update_rules.py  utils.py
examples/: mlp.ipynb
src/central_flows_jax/: __init__.py  flows.py  sdcp.py  update_rules.py  utils.py
